[gd_scene load_steps=8 format=3 uid="uid://b424yhwelbm85"]

[ext_resource type="Script" uid="uid://dbsxjxklsho8k" path="res://scripts/enemies/kamikaze_enemy.gd" id="1_pv6sq"]
[ext_resource type="SpriteFrames" uid="uid://bu3ukylqysud5" path="res://scenes/kamikaze.tres" id="2_n80cv"]
[ext_resource type="Texture2D" uid="uid://dsqd30jsqmqnq" path="res://assests/All_Fire_Bullet_Pixel_16x16_01.png" id="3_n80cv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3tuik"]
radius = 7.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3tuik"]
radius = 258.07

[sub_resource type="CircleShape2D" id="CircleShape2D_stoo5"]
radius = 47.0956

[sub_resource type="Curve" id="Curve_n80cv"]
_limits = [-500.0, 500.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.528409, 410.112), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[node name="KamikazeEnemy" type="CharacterBody2D"]
script = ExtResource("1_pv6sq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_n80cv")
animation = &"explode"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CapsuleShape2D_3tuik")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_3tuik")

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_stoo5")

[node name="CountdownLabel" type="Label" parent="."]
visible = false
offset_left = -37.0
offset_top = -51.0
offset_right = 37.0
offset_bottom = -28.0
horizontal_alignment = 1

[node name="AlertIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -28)
texture = ExtResource("3_n80cv")
region_enabled = true
region_rect = Rect2(436.165, 179.711, 8.78625, 9.02385)

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
emission_shape = 1
emission_sphere_radius = 19.4
orbit_velocity_max = 202.02
orbit_velocity_curve = SubResource("Curve_n80cv")
